src/static/static/css/base.css
body{
	background-color: #fff;
	padding-top: 40px;
}

.entire-wrapper{
	width: 100%;
}
textarea:focus, input:focus{
	outline:0;
	outline:none;
}
select:focus, input:focus, textarea:focus{
	box-shadow: inset 0 0px 1px 1px #1FBAD6;
	-moz-box-shadow: inset 0 0px 1px 1px #1FBAD6;
	-webkit-box-shadow: inset 0 0px 1px 1px #1FBAD6;
}
textarea:active, input:active{
	outline:0;
	outline:none;
}
#new_user_modal{
	display:none;
}
#view_container{
	width:100%;
}
.largeLabel{
	color: white;
	text-align: center;
	opacity:1;
	font-size:1.25em;
	
	
	
}
.smallLabel2{
	color:white;
	text-align: center;
}
#home-only .col-sm-4{
	min-width:175px;
}
p{
	font-family: "Droid serif", serif;
}
.row{
	margin-left: 0px;
	margin-right: 0px;
}

#messages_badge{
	margin-right:0%;
}
.ui-tooltip-content{
	margin-left:0px;
	color: #404040;
	background-color: #d5d5d5;
}
.ui-tooltip{
	background-color:#d5d5d5!important;
	border: 2px #404040 solid!important;
}

#annoying_row{
	width:90%;
}
#pictures input[type=submit], .btn.btn-info.btn-sm, .pager li a{
	background-color: white!important;
	color: black!important;
	border: 1px solid #111;
	border-radius:0px;
	font-weight: 100;
	-webkit-transition-duration: .5s;
	-transition-duration: .5s;
	-moz-transition-duration: .5s;
}

#go_button, #upload_button{
	width: 80px;
	background: #1FBAD6!important;
	font-weight: 300;
	color: white;
	border: 0 none;
	border-radius: 1px;
	cursor: pointer;
	z-index:1000;
}

.btn-lg, .btn-success{
	width: 100px;
	background: #1FBAD6!important;
	font-weight: bold;
	color: white;
	border: 0 none;
	border-radius: 1px;
	cursor: pointer;
	padding: 10px 5px;
	margin: 10px 5px;
	z-index:1000;
}

.btn-lg:hover, .btn-lg:focus, .btn-success:hover, .btn-success:focus{
	box-shadow: 0 0 0 2px white, 0 0 0 3px #1FBAD6;
}

#pictures input[type=submit]:hover, .btn-info.btn-sm:hover, .btn-sm:hover, .pager li a:hover, .btn-success:hover{
	background-color:#1FBAD6!important;
	color:white!important;
}
#go_button:hover, #go_button:focus, #upload_button:hover, #upload_button:focus{
 	box-shadow: 0 0 0 2px white, 0 0 0 3px #1FBAD6;

}
.pager{
	margin-top:30px;
}


.btn-lg{
	width:180px;
}

tr, td{
	color: #404040;
}


.btn-success{
	width:200px;
	margin-top:10px;
	font-size:16px;
}

.pagination{
	width: 50%!important;
}


.tab-content input{
	border-radius:0px;
}

.col-lg-10.col-12{
	width: 100%;
}
.col-md-1{
	width: 100%;
	min-width: 280px;
}
h1, h2, h3, h5, a{
	font-family: 'Roboto', sans-serif;
}
h1{
	color: #404040!important;
	letter-spacing:.2em;
    font-weight: 100!important;
}

p, form{
	font-family: 'Droid Serif', serif;
	outline:none;
}

a:active, a:focus{
	outline:none;
}
li:active, li:focus{
	outline:none!important;
}
input::-moz-focus-inner{
	border:0;
}

h1{
	text-transform: none!important;
}

input{
}

.form-control{
	color:black;
}
input{
	font-family: "Droid Serif", serif;
}

/* symbol on sidebar */

.sidebar-nav .glyphicon{
	font-size:1em;
	padding-right: 1.2em;
}

.body_section{
	border-radius: 0%;
	color:white;
	max-width:1200px;
	margin:0 auto;
}

.col-lg-4 a{
	color: black;
	font-size: 1.2em;
}
.success{
	text-align: center;
	margin-top:5px;
	color:#1FBAD6;
}

/* Registration and General Form Improvement */

form {
	margin: 0 auto;
}

#distance{
	margin-top:0px;
}
#myDiv{
	margin:0 auto;
}
.matching p{
	margin: 0px 0px 5px 0px;
}

/* all.html */
#myfriend_container{
	width:80%;
	margin:0 auto;
	display:inline-block;
}
#myfriend{
	width: auto;
	height:300px;
	max-width:450px;
}

#myfriend a{
	color: black;
	font-size: 1.125em;
}


#myfriend #match{
	font-size: 1.125em;
}

a:hover{
	text-decoration: none;
}
 /* Media Queries */

 @media (max-width: 650px) {
 	#myfriend a{
	font-size: 1em;
	}
	#myfriend #match{
	font-size: 1em;
	}
}

@media (max-width: 480px){
	.messages{
		margin-left:40px;
	}
	.btn.btn-success{
	width: 100%;
	}
	#interests-wrapper h2{
		font-size:1.25em;
	}
}

*:focus{
	outline:0;
}
@media (max-width: 760px) {
	#myfriend{
		height:300px;
	}
	.previous_user, .previous_user_hidden, .next_user, .next_user_hidden{
	}
}
@media (max-width: 600px) {
  h1{
  font-size: 2em;
}
  a{
  	font-size:1em;
  }
}


/* Mobile Media Query */

/* Profile */
@media (max-width: 450px) {
	#friend_button{
		width:100%;
	}
	#messages_button{
		width:100%;
	}
	#pictures_button{
		width:100%;
	}
	#interests_button{
		width:100%;
	}
	#single_user_body{
		width:100%;
	}
	#annoying_row{
		width:50%;
	}
	#leftbar-wrapper{
		width:80px!important;
	}
	#leftbar-wrapper span{
		width:60px;
	}

	.dropdown-toggle{
		text-align:left;
	}
	.dropdown{
		width:80%;
		float:left;
	}
	.dropdown-menu{
		margin-left:0px;
		padding-left:0px;
	}
	.dropdown-menu li a{
		padding-left:12px!important;
	}
	.pictures_container{
		margin-left:60px!important;
	}
	.col-lg-12 p{
		width:100%!important;
		text-align: center;
	}
	#edit_profile_container .row{
		margin-left: 0px;
	}
	#edit_profile_container{
		margin-left:70px!important;
	}
	#message_container{
		margin-left:80px!important;
	}
	.button_container{
		margin: 0 auto;
	}
	#message_row{
		width:50%;
	}
	#compose_message_container{
		width:60%!important;
	}
	#compose_button_container{
		width:120px!important;
	}
	.navbar-brand{
		margin-left:-15px!important;
	}	
}

